bagis sonrasi email guncellemeleri

--- a/app/views/layouts/_like_link.html.erb
+++ b/app/views/layouts/_like_link.html.erb
@@ -1,4 +1,4 @@
 <a href="http://www.facebook.com/plugins/like.php?href=<%=url%>%23fb&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=80">
-<img title="Facebook'ta Beğen" src="http://s3.amazonaws.com/benvarim-bucket-prod-2/images/facebook16.png" alt="" />
+<img title="Facebook'ta Beğen" src="http://benvarim.com/images/social_media_mini_icons/png/facebook.png" alt="" />
 <%=text%>
 </a>
