--- a/app/views/payment_mailer/thanks.html.erb
+++ b/app/views/payment_mailer/thanks.html.erb
@@ -1,11 +1,11 @@
 <%=render :partial => "email_layouts/header",
   :locals => {
-    :title => "Bağışınız İçin Teşekkür Ederiz - Benvarim.com"
+    :title => "Bağışınız için teşekkür ederiz."
   }%>
 
 Sevgili <%=@payment.name%>,<br/><br/>
 <% if @page %>
-<%=@page_owner.name%> tarafından <a href="<%=project_path @project, :only_path => false%>"><%=@project.name%></a> için oluşturulan <a href="<%=page_path @page,:only_path => false%>"><%=@page.title%></a> sayfasında yapmış olduğunuz bağış için <a href="<%=organization_path @organization, :only_path => false%>"><%=@organization.name%></a> adına teşekkür ederiz.
+<%=@page_owner.name%> tarafından <a href="<%=project_path @project, :only_path => false%>"><%=@project.name%></a> için oluşturulan <a href="<%=page_path @page,:only_path => false%>"><%=@page.title%></a> sayfasına yapmış olduğunuz bağış için <a href="<%=organization_path @organization, :only_path => false%>"><%=@organization.name%></a> adına teşekkür ederiz.
 
 <% elsif @project %>
 
@@ -16,16 +16,12 @@ Sevgili <%=@payment.name%>,<br/><br/>
 Yapmış olduğunuz bağış için <a href="<%=organization_path(@organization, :only_path => false)%>"><%=@organization.name%></a> adına teşekkür ederiz.
 
 <%end%>
-<br/>
+Bağışınız, <%=@organization.name%> banka hesaplarına güvenle ulaşmıştır.
+<br/><br/>
 
-Bağışınız, <a href="<%=organization_path(@organization, :only_path => false)%>"><%=@organization.name%></a> banka hesaplarına güvenle ulaşmıştır.
-<br/>
-Verilen desteği artırmak ve hedeflerine ulaşmalarını sağlamak için, sayfayı
-<br/>
-Facebook, Twitter gibi sosyal ağlarda paylaşabilir,
-<br/>
-Eposta yoluyla çevrene ileterek, bağış yapılmasını rica edebilirsin.
-<br/>
+Verilen desteği arttırmak ve hedeflerine ulaşmalarını sağlamak için, sayfayı Facebook, Twitter gibi sosyal ağlarda paylaşabilir, eposta ile çevrene ileterek, daha fazla bağış yapılmasını sağlayabilirsin.
+<br/><br/>
+
 <%=render :partial => "email_layouts/share_module",
   :locals => {
     :page => @page,
@@ -33,8 +29,7 @@ Eposta yoluyla çevrene ileterek, bağış yapılmasını rica edebilirsin.
     :project => @project
   }%>
 
-<br/>
-Benvarim.com'a <a href="<%=new_user_registration_path(:only_path => false)%>">kayıt olarak</a>, sen de bağış sayfası oluşturabilir ve desteklediğin kurumların daha fazla bağış toplamasını ve etkin tanıtım yapmasını sağlayabilirsin.
+<br/><br/>BenVarım'a <a href="<%=new_user_registration_path(:only_path => false)%>">kaydolarak</a> sen de bağış sayfanı oluşturabilir, inandığın kurumların daha fazla destek toplamasını sağlayabilirsin.
 <br/>
 
 
