duzgun para gostermece

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -41,7 +41,7 @@
 
         <%if @organization.collected? %>
         <div class="toplam-bagis">
-          Bugüne kadar toplanan bağış miktarı: <%= @organization.collected %> <small>TL</small>
+          Bugüne kadar toplanan bağış miktarı: <%= @organization.collected_str %> <small>TL</small>
         </div>
         <% end %>
 
