--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,7 +1,4 @@
-
-
 <%= form_for @project, :html => { :multipart => true } do |f| %>
-<%=debug f.methods%>
   <% if @project.errors.any? %>
     <div class="msg-error msg">
       <h2>Lütfen bu <%=@project.errors.count%> hatayı düzeltiniz</h2>
@@ -46,14 +43,6 @@
   </div>
 
   <!-- hide this for new records, creates a problem in validation -->
-  <% if @project.new_record? == false%>
-    <div class="field">
-      <%= f.label :accepts_random_payment %>
-      <span>
-        <%= f.check_box :accepts_random_payment %> Gönüllüler seçebilsin
-      </span>
-    </div>
-  <% end %>
   <% if @predefined_payments %>
     <% @predefined_payments.each do |pp| %>
       <% if pp.errors.any? %>
@@ -148,7 +137,7 @@
         });
         <% if @predefined_payments %>
           <% @predefined_payments.each do |pp| %>
-            $.tmpl(rowTemplate, {name:"<%=pp.name.sub("\"", "\\\"")%>", amount: <%=pp.amount%>,disabled:<%=pp.disabled%>, uiid : "pp-uiid-" + (ppUiid ++), id:<%=pp.id%>}).appendTo( "#predefined_payments" );
+            $.tmpl(rowTemplate, {name:"<%=pp.name.sub("\"", "\\\"")%>", amount: "<%=pp.amount%>",disabled:<%=pp.disabled%>, uiid : "pp-uiid-" + (ppUiid ++), id:"<%=pp.id%>"}).appendTo( "#predefined_payments" );
           <% end %>
         <% end %>
         <% if @deleted_predefineds %>
