--- a/app/views/home/includes/_faq.erb
+++ b/app/views/home/includes/_faq.erb
@@ -21,16 +21,16 @@
     <p>Yardımseverlerin yaptığı bağışlar bankacılık ve PayPal kanalıyla direk olarak bağış yaptığınız kurum’un hesabına aktarılmaktadır. Emin olmak için, bağış yaptığınız kurumla iletişime geçmenizi öneririz. Benvarim.com üzerinde, kurum profil sayfasında, desteklediğiniz kurumun iletişim bilgilerini bulabilirsiniz.</p>
 
     <h4>Bağış yapma sistemi güvenli mi?</h4>
-    <p>Evet. BenVarım platformu bağışçılara <a title="PayPal Türkiye" href="www.paypal.com.tr" target="_blank">PayPal</a> ve bankalar üzerinden işleyen bir sistem sunmaktadır. PayPal uluslararası para transferi hizmeti sunan, 100 milyondan fazla kullanıcıya sahip ve kendini kanıtlamış bir ödeme sistemidir. Türkiye’de Nisan 2011′den itibaren Türkiye PayPal Direktörlüğü bulunmaktadır ve Türk Lirası ile işlem yapılabilir.</p>
+    <p>Evet. BenVarım platformu bağışçılara <a title="PayPal Türkiye" href="http://www.paypal.com.tr" target="_blank">PayPal</a> ve bankalar üzerinden işleyen bir sistem sunmaktadır. PayPal uluslararası para transferi hizmeti sunan, 100 milyondan fazla kullanıcıya sahip ve kendini kanıtlamış bir ödeme sistemidir. Türkiye’de Nisan 2011′den itibaren Türkiye PayPal Direktörlüğü bulunmaktadır ve Türk Lirası ile işlem yapılabilir.</p>
 
     <h4>Kredi kartı veya banka kartıyla bağış yapabilir miyim?</h4>
-    <p>Elbette. BenVarım platformu, bağışçıların Visa ve Mastercard amblemi olan tüm kartlarla bağış yapma olanağı sağlar. Bununla beraber, eğer kişisel PayPal hesabınız varsa, bu yöntemle de bağış yapabilirsiniz.</p>
+    <p>Elbette. BenVarım platformu, bağışçılara Visa ve Mastercard amblemi olan tüm kartlarla bağış yapma olanağı sağlar. Bununla beraber, eğer kişisel PayPal hesabınız varsa, bu yöntemle de bağış yapabilirsiniz.</p>
 
     <h4>PayPal’den yapılan ödemelerin komisyonunu kim ödüyor?</h4>
-    <p>Eğer kendi PayPal hesabınızla bağış yaparsanız, kimse komisyon ödenmiyor. Eğer banka veya kredi kartınızı kullanarak PayPal aracılığıyla ödeme yaparsanız, PayPal, bağış yaptığınız kurumundan, yapılan bağış miktarına göre %2 ile %8 arası hizmet bedeli tahsil edecektir.</p>
+    <p>Eğer kendi PayPal hesabınızla bağış yaparsanız, kimse komisyon ödenmiyor. Eğer banka veya kredi kartınızı kullanarak PayPal aracılığıyla ödeme yaparsanız, PayPal, bağış yaptığınız kurumdan, yapılan bağış miktarına göre %2 ile %8 arası hizmet bedeli tahsil edecektir.</p>
 
     <h4>BenVarım bir vakıf veya dernek mi?</h4>
-    <p>Hayır. BenVarım platformu ne bir vakıf veya dernek, ne de bir sivil toplum kuruluşudur. Kurucuları senelerce sivil toplum kuruluşlarında yöneticilik yapmış olan BenVarım platformu, Türkiye’deki vakıf ve derneklere hizmet sunan online bir blogging ve sosyal medya servisidir. Benvarim.com, Türkiye’deki sivil toplum kuruluşlarının güçlenmesi için çalışan bir hizmet sağlayıcıdır olarak özetleyebilir.</p>
+    <p>Hayır. BenVarım platformu ne bir vakıf veya dernek, ne de bir sivil toplum kuruluşudur. Kurucuları senelerce sivil toplum kuruluşlarında yöneticilik yapmış olan BenVarım platformu, Türkiye’deki vakıf ve derneklere hizmet sunan online bir blogging ve sosyal medya servisidir. Benvarim.com, Türkiye’deki sivil toplum kuruluşlarının güçlenmesi için çalışan bir hizmet sağlayıcıdır olarak özetlenebilir.</p>
 
     <h4>BenVarım’ın amacı nedir?</h4>
     <p>BenVarım Platformu, sivil toplum kuruluşlarının –özellikle Türkiye’de bağış toplama yetkisi olan vakıf ile derneklerin- Facebook, Twitter ve benzeri sosyal ağlar ile gönüllülerine ulaşmasını sağlar. Böylece gönüllüler hem desteklediği projelere direk bağış yapabilir hem de inandığı kuruluşlar için kendi bağış sayfalarını oluşturarak çevrelerinden destek toplayabilir.</p>
@@ -105,7 +105,7 @@
 
 	<div id="tabs-3" class="accordion">
     <h4>Bir gönüllü olarak BenVarım’ın bana sağlayacağı fayda nedir?</h4>
-    <p>Hayatınızdaki her faaliyette akraba ve arkadaşlarınızın size destek olacağını biliyorsunuz. Bu manevi faydayı, topluma yararlı bir faydaya dönüştürmek sizin elinizde. Eğer koşu, bisiklet, yüzme veya herhangibir spor müsabakasına katılıyorsanız, yeni sergi açtıysanız, evleniyorsanız, çocuğunuz olduysa veya birinin yasını tutuyorsanız, doğumgünü ve yılbaşı kutlamalarını yapıyorsanız, tek yapmanız gereken BenVarım’da bir bağış sayfası yaratmak ve arkadaşlarınızdan sizin tercih ettiğiniz kuruma bağış yapmalarını istemek.</p>
+    <p>Hayatınızdaki her faaliyette akraba ve arkadaşlarınızın size destek olacağını biliyorsunuz. Bu manevi faydayı, topluma yararlı bir faydaya dönüştürmek sizin elinizde. Eğer koşu, bisiklet, yüzme veya herhangi bir spor müsabakasına katılıyorsanız, yeni sergi açtıysanız, evleniyorsanız, çocuğunuz olduysa veya birinin yasını tutuyorsanız, doğumgünü ve yılbaşı kutlamalarını yapıyorsanız, tek yapmanız gereken BenVarım’da bir bağış sayfası yaratmak ve arkadaşlarınızdan sizin tercih ettiğiniz kuruma bağış yapmalarını istemek.</p>
 
     <h4>Bağış sayfamda neler yazmalıyım?</h4>
     <p>Kişisel olun. Unutmayın ki, bağışçıların, maddi desteklerinin sebebi gönüllüsü olduğunuz kurumdan ziyade ‘siz’ olacaksınız. Bu nedenle, tanıtım sayfanızı mümkün olduğunca kişiselleştirin. Dostlarınızın bir kahve ısmarlaması, ailenizin sizi bir akşam yemeği’ne çıkarması veya iş arkadaşlarınızın size yılbaşı hediyesi alması yerine aynı parasal miktarda bağışı desteklediğiniz kuruma yapmasını teşvik edebilirsiniz.</p>
