--- a/app/views/home/includes/_how_it_works.erb
+++ b/app/views/home/includes/_how_it_works.erb
@@ -1,6 +1,6 @@
 <div class="nedir-item">
 <h3>1) Gönüllü</h3>
-<p>Hemen sayfanızı yaratın ve gönülllüsü olduğunuz sivil toplum kuruluşu projelerini, facebook, twitter, eposta ve blog’unuz ile sosyal ağınıza duyurun.</p>
+<p>Hemen sayfanızı yaratın ve gönüllüsü olduğunuz sivil toplum kuruluşu projelerini, Facebook, Twitter, eposta ve blog’unuz ile sosyal ağınıza duyurun.</p>
 <%=render :partial => "layouts/quickstart_widget",
 :locals => {
   :available_organizations => @available_organizations
