--- a/app/views/home/maintenance.html.erb
+++ b/app/views/home/maintenance.html.erb
@@ -21,112 +21,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="shortcut icon" href="http://taksimapartments.com/benvarim.com/favicon.ico">
 
 
   <!-- CSS : implied media="all" -->
-  <link rel="stylesheet" href="css/style.css?v=2">
+  <link rel="stylesheet" href="http://taksimapartments.com/benvarim.com/css/style.css?v=2">
 
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-  <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
+  <link rel="stylesheet" media="handheld" href="http://taksimapartments.com/benvarim.com/css/handheld.css?v=2">  -->
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/libs/modernizr-1.6.min.js"></script>
-
-
-  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
-
-
-  <script src="js/plugins/cufon.js" type="text/javascript"></script>
-  <script src="js/plugins/Gotham_Rounded_Medium_350.font.js"></script>
-  <script src="js/plugins/Gotham_Rounded_Light_300.font.js"></script>
-  <script src="js/plugins/yoxview/yoxview-init.js"></script>
-
-
-	<script type="text/javascript">
-  	function validateEmail(email) {
-     var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
-     return email.match(re)
-    }
-
-    function submit_form(){
-
-       $("#submit-email").attr('disabled','disabled');
-
-        $.ajax({
-           type: "POST",
-           url: "dynamic/sendmail.php",
-           data: {
-             email: $('#input-email').attr('value')
-           },
-           success: function(msg){
-             $('#modal-contact-form .inner').html('<h3>Teşekkürler!</h3><p>Ön kayıt yaptırdığınız için teşekkür ederiz. En kısa sürede size geri dönüş yapacağız.</p><h3>Bizi takip edin!</h3><ul class="line clear-list"><li class="size1of2"><a href="http://www.facebook.com/pages/Ben-Varim/135114429880530" target="_blank"><img src="css/images/facebook.png" /></a> <a href="http://twitter.com/#!/Ben_Varim" target="_blank"><img src="css/images/twitter.png" /></a></li><li class="size1of2 lastUnit"></li></ul>');
-
-             // init_cufon();
-
-           }
-        });
-    }
-
-    function check_errors(){
-      if( validateEmail($('#input-email').attr('value')) ){
-        $('.error-msg').fadeOut();
-        $("#input-email").removeClass('error');
-      }
-    }
-
-    function display_errors(){
-      // display errors
-      $("#input-email").addClass('error').after('<p class="error-msg">Geçersiz e-posta adresi girdiniz.</p>');
-
-      // check if the errors are fixed
-      $("#input-email").keyup(function(){
-        check_errors();
-      });
-
-      $("#input-email").blur(function(){
-        check_errors();
-      });
-    }
-
-	  function init_cufon(){
-	    Cufon.replace('h3, .button', { fontFamily: 'Gotham Rounded Medium' });
-  		Cufon.replace('.cufon', { fontFamily: 'Gotham Rounded Medium' });
-  		Cufon.replace('p', { fontFamily: 'Gotham Rounded Light' });
-	  }
-
-    // init_cufon();
-
-    $(document).ready(function(){
-
-    	$(".yoxview").yoxview({
-    	  lang: 'tr',
-        allowInternalLinks: true,
-        onOpen: function(){
-
-          // Update Fonts in the Modal
-          // init_cufon();
-
-          $("#submit-email").click( function(){
-
-            if( validateEmail($('#input-email').attr('value')) ){
-              submit_form();
-            } else{
-              display_errors();
-            }
-
-            return false;
-
-          });
-        }
-      });
-
-    });
-	</script>
+  <script src="http://taksimapartments.com/benvarim.com/js/libs/modernizr-1.6.min.js"></script>
 
 
 </head>
