adds GA to paypal page

--- a/app/views/home/paypal.html
+++ b/app/views/home/paypal.html
@@ -184,6 +184,17 @@
             <td width="20">&nbsp;</td>
         </tr>
     </table>
+    <script>
+    var _gaq = [['_setAccount', 'UA-21493934-1'], ['_trackPageview']];
+    (function(d, t) {
+    var g = d.createElement(t),
+    s = d.getElementsByTagName(t)[0];
+    g.async = true;
+    g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g, s);
+    })(document, 'script');
+    </script>
+
 </body>
 
 
