fixes broken image urls

--- a/app/views/home/paypal.html
+++ b/app/views/home/paypal.html
@@ -11,17 +11,17 @@
         	<td colspan="9">
                 <table width="800" cellpadding="0" cellspacing="0" border="0">
                     <tr>
-        				<td rowspan="3" style="width: 206px; height: 239px; background: url('img_vertical.jpg') no-repeat;"></td>
+        				<td rowspan="3" style="width: 206px; height: 239px; background: url('http://benvarim.com/docs/paypal/img_vertical.jpg') no-repeat;"></td>
                         <td colspan="2" style="text-align: right;"><a href="http://altfarm.mediaplex.com/ad/ck/3484-137347-12439-11"><img src="http://benvarim.com/docs/paypal/pplogo.jpg" border="0" width="200" height="61" alt="PayPal"/></a></td>
         			</tr>
                     <tr>
                     	<td style="width: 385px; height: 70px;"><img src="http://benvarim.com/docs/paypal/header_top.jpg" border="0"/></td>
-                        <td rowspan="2" style="width: 209px; height: 178px; background: url('discount_badge.jpg') no-repeat;">
+                        <td rowspan="2" style="width: 209px; height: 178px; background: url('http://benvarim.com/docs/paypal/discount_badge.jpg') no-repeat;">
                           <a href="http://benvarim.com/?ref=paypal" style="display: block; height: 100%; width: 100%">&nbsp;</a>
                         </td>
                     </tr>
                     <tr>
-                        <td valign="top" style="width: 385px; height: 108px; vertical-align: top; background: url('head_txt_bg.jpg') no-repeat; font-family: Helvetica, Arial, sans-serif; font-weight: regular; font-size: 12px; color: #333333; text-align: left;">
+                        <td valign="top" style="width: 385px; height: 108px; vertical-align: top; background: url('http://benvarim.com/docs/paypal/head_txt_bg.jpg') no-repeat; font-family: Helvetica, Arial, sans-serif; font-weight: regular; font-size: 12px; color: #333333; text-align: left;">
                         <span style="margin-left: 15px; display: block">
                           <br/>BenVarim.com üzerinden, inandığınız vakıf ya da dernekler<br/>yararına bağış sayfanızı yaratıp Facebook ve Twitter gibi sosyal medya kanalları üzerinden çevrenizle paylaşın. Gelen bağışlar %100 güvenli olarak anında kurumun hesabına giderken siz de <a href="http://blog.benvarim.com/yeni-yil-hediyesi/?ref=paypal">daha iyi bir dünya yaratmanın keyfini yaşayın</a>.
                         </span>
