updates form title

--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,7 +1,7 @@
 <div class="one-column">
   <div class="widget widget-light">
     <div class="w-inner">
-      <div class="w-title">Bağış Sayfası Yarat</div>
+      <div class="w-title">İlk adım: Bağış Sayfanı Yarat</div>
 
 
       <%= render 'form' %>
