--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -34,7 +34,8 @@
 
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_area :title, :class => :"tooltip-trigger",  :title => "<h3>Doğru bir bağış sayfası başlığı:</h3>
+    <%= f.text_area :title, :class => :"tooltip-trigger",  :title => "<h3>En can alıcı sözün buraya!</h3>
+    <p>Başlık, sosyal medya paylaşımlarında görünecektir. Doğru bir bağış sayfası başlığı:</p>
     <ul>
       <li>Kısa ve öz olmalı,</li>
       <li>Seni ve amacını yansıtmalı,</li>
@@ -44,18 +45,18 @@
 
   <div class="field">
     <%= f.label :goal %>
-    <%= f.text_field :goal, :class => "tooltip-trigger", :title => "<p>Toplayabileceğinizi düşündüğünüz, amaca uygun ve gerçekçi hedefler belirleyin.</p><p><small><em>Hedefinizi daha sonra değiştirebilirsiniz.</em></small></p>" %> TL
+    <%= f.text_field :goal, :value => "", :class => "tooltip-trigger", :title => "<h3>Daha iyi yarınlar için hedef belirle!</h3><p>Toplayabileceğini düşündüğün, amacına uygun ve gerçekçi bir miktar belirlemek gelecek bağışları olumlu yönde etkileyecektir.</p>" %> TL
   </div>
 
   <div class="field">
     <%= f.label :Açıklama %>
-    <%= f.text_area :description_html, :class => " tooltip-trigger", :title => "<h3>Tüm detayları paylaşmanın vakti!</h3><p>İçinizden geldiği gibi uzun uzun yazın. Bu sayfayı neden oluşturduğunuzu insanlara olanca içtenliğinizle anlatın ki daha fazla bağış toplansın.</p>
-    <p>Sürecin tamamen şeffaf ve kolay olduğunu belirtin ve insanları harekete geçirecek bir sesleniş ile açıklamanızı sonlandırın.</p>
+    <%= f.text_area :description_html, :class => " tooltip-trigger", :title => "<h3>Tüm detayları paylaşma vakti!</h3><p>İçinden geldiği gibi uzun uzun yaz. Bu sayfayı neden oluşturduğunu insanlara olanca içtenliğinle anlat ki daha fazla bağış toplansın.</p>
+    <p>Sürecin tamamen şeffaf ve kolay olduğunu belirtmeyi unutma ve insanları harekete geçirecek bir sesleniş ile açıklamanı sonlandır.</p>
     " %>
   </div>
 
   <div class="field">
-    <%= f.label :Fotoğraf %>
+    <%= f.label :"Açıklama Fotoğrafı", :class => "page-photo-label" %>
     <% unless @page.new_record?%>
       <%= image_tag @page.logo.url(:thumb) %>
     <% end %>
