--- a/public/stylesheets/tooltips.css
+++ b/public/stylesheets/tooltips.css
@@ -6,9 +6,6 @@
  */
 
 .tooltip{
-   -moz-box-shadow: 0 0 5px #999;
-   -webkit-box-shadow: 0 0 5px #999;
-   box-shadow: 0 0 5px #999;
    padding: 10px;
    font-size: 14px;
    width: 300px;
@@ -17,13 +14,16 @@
    -moz-border-radius: 5px;
    border-radius: 5px;
    display: none;
-   border: 1px solid #FFF;
-   background: #EEE;
+   border: 1px solid #CCC;
+   background: #e5e5e5;
    color: #444;
    text-shadow: 0px 1px 0px #FFF;
    line-height: 1.5;
+   position:relative;
+}
 
-
+.tooltip-inner {
+  border:1px solid #FFF;
 }
 
 .tooltip-alert{
@@ -99,5 +99,28 @@
 }
 
 
+
+
+
+.tooltip-arrow-border {
+  border-color: transparent  #CCC transparent transparent;
+  border-style: solid;
+  border-width: 10px;
+  height:0;
+  width:0;
+  position:absolute;
+  top: 40%;
+  left:-21px;
+}
+.tooltip-arrow {
+  border-color: transparent #e5e5e5 transparent transparent ;
+  border-style: solid;
+  border-width: 10px;
+  height:0;
+  width:0;
+  position:absolute;
+  top: 40%;
+  left:-20px;
+}
 
 
