updates hakkimizda and iletisim

--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -5,12 +5,16 @@
         <%= render 'form' %>
     </div>
   </div>
+
+
     <table style="color:white; font-size:10px;" id="info_table">
-      <tr><td>Sahibi:</td><td>Levent Baş</td></tr>
-      <tr><td>Posta adresi:</td><td>49 Ramona st, San Francisco, CA, ABD</td></tr>
-      <tr><td>E-Posta:</td><td>iletisim@benvarim.com</td></tr>
-      <tr><td>Telefon:</td><td>532 644 04 32</td></tr>.
+      <tr><td>Posta adresi:</td><td>957A Oak St, San Francisco, CA 94117, ABD</td></tr>
+      <tr><td>E-posta:</td><td>iletisim@benvarim.com</td></tr>
+      <tr><td>Telefon (TR):</td><td>+90 (532) 644-0432</td></tr>
+      <tr><td>Telefon (ABD):</td><td>+1 (415) 565-9166</td></tr>
     </table>
+
+
 
 </div>
 <style>
