--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -11,14 +11,11 @@
 
         <p>Önceliğimizi sivil toplum kuruluşlarına verdiğimiz katma değerin artmasını sağlamak olarak belirledik. Uzun vadede BenVarım projesinin teknik ve ekonomik olarak sürdürülebilir kılmak için çeşitli alternatifler modeller üzerine çalışıyoruz.</p>
 
-        <p>Hayal ettiğimiz aşamaya gelene uzun bir yolumuz olduğunun bilincindeyiz. Bu sürede sizlerin eleştirileri ve önerilerinize ihtiyacımız olduğu gibi, ekibimizi genişletmeye de ihtiyacımız var. Lütfen bizimle iletişimde kalmaya ve bizi çevrenize duyurmaya devam edin. Ekibimize katılmak için lütfen kariyer bölümüzü ziyaret edin ve bizimle <%=link_to "iletişim", :new_contact_form %> geçin.</p>
+        <p>Hayal ettiğimiz aşamaya gelene uzun bir yolumuz olduğunun bilincindeyiz. Bu sürede sizlerin eleştirileri ve önerilerinize ihtiyacımız olduğu gibi, ekibimizi genişletmeye de ihtiyacımız var. Lütfen bizimle iletişimde kalmaya ve bizi çevrenize duyurmaya devam edin. Ekibimize katılmak için lütfen kariyer bölümüzü ziyaret edin ve bizimle <%=link_to "iletişime", :new_contact_form %> geçin.</p>
       </div>
-
 
       <div class="p-details">
         <%= render 'home/includes/founders'%>
-        <%= render 'home/includes/volunteers'%>
-
       </div>
     </div>
   </div><!-- p-content -->
