--- a/app/views/home/includes/_subnav_nedir.erb
+++ b/app/views/home/includes/_subnav_nedir.erb
@@ -1,5 +1,5 @@
 <ul>
-  <li><%=link_to "BenVarım Ailesi", :hakkimizda, :class => "rc-tl #{print_if_selected_tab :home, :hakkimizda}", :id => "pn-hakkimizda"%></li>
+  <li><%=link_to "Hakkımızda", :hakkimizda, :class => "rc-tl #{print_if_selected_tab :home, :hakkimizda}", :id => "pn-hakkimizda"%></li>
 
 <!--
   <li><%=link_to "Basında BenVarım", :basinda_benvarim, :class => "#{print_if_selected_tab :home, :basinda_benvarim}", :id => "pn-basinda-benvarim" %></li>
