--- a/app/views/home/includes/_volunteers.erb
+++ b/app/views/home/includes/_volunteers.erb
@@ -7,9 +7,13 @@
         <div class="_pm_shadow l"></div>
         <div class="_pm">
           <div class="_pm_inner">
-            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/onuralp-armagan.jpg" width="152" />
+            <img alt="Onuralp Armağan" class="alt-img" src="/images/about/onuralp-armagan.jpg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
+          <div class="_pm_details">
+            <div class="p-name">Onuralp Armağan</div>
+            <div class="p-title">Mali Danışman</div>
+          </div><!-- _pm_details -->
         </div>
       </div>
     </div>
@@ -38,12 +42,16 @@
             <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/melis-okan.jpg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
+          <div class="_pm_details">
+            <div class="p-name">Melis Okan</div>
+            <div class="p-title">İş Geliştirme Direktörü</div>
+          </div><!-- _pm_details -->
         </div>
       </div>
     </div>
     <div class="pr-details">
       <div class="p-name">Melis Okan</div>
-      <div class="p-title">İş Geliştirme Sorumlusu</div>
+      <div class="p-title">İş Geliştirme Direktörü</div>
       <p>BenVarım projesine gönüllü olarak İş Geliştirme ve Halkla İlişkiler konularında destek veren Melis, 1985 yılında İstanbul'da doğdu. Ortaokul ve liseyi Saint Michel Fransız Lisesi'nde tamamladıktan sonra, yüksek öğrenimine Boğaziçi Üniversitesi ile State University of New York' da devam ederek, Uluslararası İlişkiler (ana dal) ve Sosyoloji (yan dal) alanlarında çift diploma ile mezun oldu.</p>
       <p>Sivil toplumun gerekliliğinin ve öneminin farkına erken öğrencilik yıllarında varan Melis, <a href="http://www.greenpeace.org/turkey/tr/" target="_blank">Greenpeace</a> ve <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv">Türkiye Eğitim Gönüllüleri Vakfı</a> gibi Türkiye'nin önde gelen sivil toplum kuruluşlarında gönüllü olarak çalışarak STK örgütlenmesi hakkında tecrübe edindi.  Bu tecrübenin sonucunda, mezuniyet sonrası New York'ta kar amacı gütmeyen bir kuruluş olan <a href="http://www.americanturkishsociety.org/" target="_blank">The American Turkish Society</a>'de yönetici asistanı ve program koordinatörü olarak kariyerine başladı.</p>
       <p>Bugüne kadar edindiği bilgi ve tecrübeyi, Türkiye'nin teknolojiyi ve sosyal medyayı ön plana çıkartan ilk sosyal girişimi olan BenVarım'a aktarmakta ve bu yolla daha bilinçli bir toplumun oluşmasına katkıda bulunduğuna inanarak görevine devam etmektedir.</p>
@@ -78,6 +86,10 @@
             <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/sukru-bezen.jpg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
+          <div class="_pm_details">
+            <div class="p-name">Şükrü Bezen</div>
+            <div class="p-title">Yazılım Mühendisi</div>
+          </div><!-- _pm_details -->
         </div>
       </div>
     </div>
