--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -75,7 +75,8 @@
 .p-summary{
     font-size: 16px;
     font-style: normal;
-    font-family: Georgia, Garamond, serif;
+    font-family:   Helvetica, sans-serif;
+    font-weight: 300;
     margin: 20px 0;
     color: #777;
     margin-bottom: 40px;
@@ -154,7 +155,8 @@
 }
 
 .pf-desc p{
-  font-family: Georgia, Garamond, serif;
+  font-family: "Gotham Rounded", Helvetica, sans-serif;
+  font-weight: 300;
   color: #999;
   font-size: 18px;
   line-height: 1.5;
