fixes iphone background bug

--- a/app/views/home/nasil_calisir.html.erb
+++ b/app/views/home/nasil_calisir.html.erb
@@ -14,7 +14,7 @@
 
         <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
 
-        <p>Gönüllüsü olduğunuz vakıf veya derneğin, bağış kampanyasına katılarak kendinize bir web sayfası yaratabilirsiniz.  BenVarım ile, sosyal ağınızda bulunan arkadaş, akraba ve diğer gönüllülere kolayca ulaşacak ve daha fazla bağış toplanmasına aracı olacaksınız.</p>
+        <p>Gönüllüsü olduğunuz vakıf veya derneğin, bağış kampanyasına katılarak kendinize bir bağış sayfası yaratabilirsiniz.  BenVarım ile, sosyal ağınızda bulunan arkadaş, akraba ve diğer gönüllülere kolayca ulaşacak ve daha fazla bağış toplanmasına aracı olacaksınız.</p>
 
         <p>BenVarım, vakıf ve derneklerin seslerini daha geniş kitlelere ulaştırır.</p>
 
