adds paypal logo to  donation modal

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -65,8 +65,11 @@
         <input type="submit" value="Gönder" name="commit" class="yellow button large">
       </div>
 
-      <small>Gönder tuşuna bastıktan sonra ödeme bilgilerinizi girmek için %100 güvenli ödeme sistemi Paypal'a yönlendirileceksiniz. Ödeme yaptıktan sonra makbuzunuz e-posta adresinize gönderilecek ve benvarim.com'a geri geleceksiniz.</small>
-
+      <div class="paypal-desc">
+        <img src="/docs/paypal/icon1.jpg" />
+        <p><small>Gönder tuşuna bastıktan sonra ödeme bilgilerinizi girmek için %100 güvenli ödeme sistemi Paypal'a yönlendirileceksiniz.</small></p>
+          <p><small>Ödeme yaptıktan sonra makbuzunuz e-posta adresinize gönderilecek ve benvarim.com'a geri geleceksiniz.</small></p>
+      </div>
       </form>
 
     </div>
