proje html view

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_area :description, :class => :mceEditor %>
+    <%= f.text_area :description_html, :class => :mceEditor %>
   </div>
 
   <!-- hide this for new records, creates a problem in validation -->
