--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,7 +49,7 @@
 
 
         <div class="fcr-desc truncate-short">
-          <%= raw @project.description %>
+          <%= raw @project.description_html %>
         </div>
       </div>
     </div>
