--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -45,12 +45,17 @@
 
   <div class="field">
     <%= f.label :goal %>
-    <%= f.text_field :goal, :value => "", :class => "tooltip-trigger", :title => "<h3>Daha iyi yarınlar için hedef belirle!</h3><p>Toplayabileceğini düşündüğün, amacına uygun ve gerçekçi bir miktar belirlemek gelecek bağışları olumlu yönde etkileyecektir.</p>" %> TL
+    <%= f.text_field :goal, :class => "tooltip-trigger", :title => "<h3>Daha iyi yarınlar için hedef belirle!</h3><p>Toplayabileceğini düşündüğün, amacına uygun ve gerçekçi bir miktar belirlemek gelecek bağışları olumlu yönde etkileyecektir.</p>" %> TL
+  </div>
+
+  <div class="field">
+    <%= f.label :end_time %>
+    <%= f.date_select :end_time, :include_blank => true, :start_year=>2011%>
   </div>
 
   <div class="field">
     <%= f.label :Açıklama %>
-    <%= f.text_area :description_html, :class => " tooltip-trigger", :title => "<h3>Tüm detayları paylaşma vakti!</h3><p>İçinden geldiği gibi uzun uzun yaz. Bu sayfayı neden oluşturduğunu insanlara olanca içtenliğinle anlat ki daha fazla bağış toplansın.</p>
+    <%= f.text_area :description_html, :class => " tooltip-trigger mceEditor", :title => "<h3>Tüm detayları paylaşma vakti!</h3><p>İçinden geldiği gibi uzun uzun yaz. Bu sayfayı neden oluşturduğunu insanlara olanca içtenliğinle anlat ki daha fazla bağış toplansın.</p>
     <p>Sürecin tamamen şeffaf ve kolay olduğunu belirtmeyi unutma ve insanları harekete geçirecek bir sesleniş ile açıklamanı sonlandır.</p>
     " %>
   </div>
