--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,6 +49,10 @@
 
 
         <div class="fcr-desc truncate-short">
+          <% if @project.end_time %>
+            <b>Bitiş Zamanı:</b> <%=@project.end_time.in_time_zone("Istanbul").to_formatted_s(:simple)%><br/>
+
+          <% end %>
           <%= raw @project.description_html %>
         </div>
       </div>
